--- a/Meowies/Meowies.csproj
+++ b/Meowies/Meowies.csproj
@@ -24,5 +24,6 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.5"/>
         <PackageReference Include="Flurl.Http" Version="4.0.0-pre6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 </Project>
